# prehensile_manipulation

./: .gitignore  DoubleDescription.m  README.md  computeStabilityMargin.m  coneStabilityMargin.m  contactScrew.m  drawWrench.m  example_allen_key.m  example_point_finger.m  example_sandwich.m  forceControl.m  frictionCone.m  frictionCone2D.m  getFrictionalJacobianFromContacts.m  getJacobianFromContacts.m  getWholeJacobian.m  getWholeJacobianFrictional.m  hybridServoing.m  m3t2.m  partialGraspModeEnumeration.m  setup.bash  stabilityMarginOptimization.m  todo  wrenchSpaceAnalysis.m  wrenchSpaceAnalysis_modeSelection.m
configs/: wrench_space_analysis_config.yaml
cpp/: CMakeLists.txt  README.md
cpp/include/: eiquadprog.hpp  polyhedron.h  shared_grasping_jacobian.h  solvehfvc.h  timer.h  wrench_space_analysis.h
cpp/src/: exam.cpp  lp.cpp  polyhedral.cpp  polyhedron.cpp  pybind_wrappers.cpp  shared_grasping_jacobian.cpp  solvehfvc.cpp  test.cpp  testEigenLU.cpp  testPybind.cpp  testQHull.cpp  test_wrenchstamping.cpp  testpoly.cpp  testppl.cpp  timer.cpp  wrenchStampingPybind.cpp  wrench_space_analysis.cpp
cpp/tests/: test_wrenchstamping.cpp  test_wrenchstamping2.cpp  testcdd.cpp
data/hyper2/: test1_friction.txt  test2_geometrical.txt
data/hyper4/: test1_friction.txt  test2_geometrical.txt
matlab/: computeStabilityMargin.m  forceControl.m  frictionCone2D.m  getFrictionalJacobianFromContacts.m  getJacobianFromContacts.m  getJacobianFromContacts3D.m  getWholeJacobian.m  getWholeJacobianFrictional.m  getWholeJacobian_simple.m  hybridServoing.m  preProcessing.m  sameConeCheck.m  sharedGraspModeEnumeration.m  stabilityMarginOptimization.m  testfun.m  velocityFeasibilityCheck.m  wrenchSpaceAnalysis.m  wrenchSpaceAnalysis_modeSelection.m
matlab/algorithms/: hybrid_servoing.m  ochs.m  ochs_max_v.m  test.m  test.mat
matlab/optimization/: idBackTrack_coneIntersection.m  sym_derivation_stability_margin_jacobian.m
matlab/plots/: drawCone.m  drawContactScrew.m  drawWrench.m  drawWrenchSpace.m  plot_optimization_result.m  plot_wrench_stamping_test_friction.m  plot_wrench_stamping_test_geometry.m  plotting.m
matlab/tests/: example_allen_key.m  example_point_finger.m  example_sandwich.m  example_side_push.m  example_step_crawling.m  rotz_deg.m  singular_test.m  singular_test2.m  singular_test3.m  singular_test4.m  testHybridServoing.m  testHybridServoing3D.m
matlab/utilities/: v3t2.m
python/: test.py  test2.py  test2d.py  test2d_cxy.py  test2d_noforcebalance_cxy.py  test2d_singular.py  testSimple3D.py  test_bug.py  test_stability_margin_c.py  wrenchStampingWrapper.py
